--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -148,7 +148,7 @@ small, .small {
 /* Pages */
 
 .hero {
-    background: #fdd93d;
+    background: #3d8afd;
     padding: 5rem 5rem;
 }
 
@@ -618,11 +618,12 @@ background-color: #fff;
 }
 
 .sidebar .social_media_content {
-    margin: auto auto 20px auto;
-    width: 50%;
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin: 0 auto;
+    width: 40%;
+    padding-bottom: 20px;
 
     #twitter_icon {
         fill: #00acee;
@@ -633,9 +634,8 @@ background-color: #fff;
     }
 
     p {
-
-        font-size: 20px;
-        margin: 0 20px 0 30px;
+        font-size: 18px;
+        margin: 0 0 0 20px;
         text-align: center;
     }
 }
