Se hacen arreglos al logo de la web

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -491,6 +491,11 @@ ul.tags li a:hover {
 	font-size:30px;
 }
 
+#logo_test {
+    height: 60px;
+    margin: 0 0 0 0 !important;
+}
+
 .post-top-meta.authorpage .author-thumb {
 	float:none;
 }
