Se han editado los autores del blog y se ha cambiado el logo. Ahora en vista de PC se verá icono junto a nombre y en movil solo el icono

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,11 +39,9 @@ gtag('config', '{{site.ganalytics}}');
         <div class="container">
 
           <a class="navbar-brand text-dark font-weight-bold big d-flex align-items-center" href="{{site.baseurl}}/">
-          {% if site.logo %}
-          <img class="mr-2" src="{{site.baseurl}}/{{site.logo}}" id="logo_test" alt="logo"> 
-          {% else %}
+          
+          <img class="mr-2" src="{{site.baseurl}}/{{site.logo}}" id="main_logo_navbar" alt="logo"> 
           <span class="d-none d-md-inline-block">{{ site.title }}</span>
-          {% endif %}
           </a> | 
           
 
