--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -491,9 +491,8 @@ ul.tags li a:hover {
 	font-size:30px;
 }
 
-#logo_test {
+#main_logo_navbar {
     height: 50px;
-    margin: 0 0 0 0 !important;
 }
 
 .post-top-meta.authorpage .author-thumb {
