--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -77,11 +77,11 @@ post_class: post-template
              <!-- Author Box -->
                 {% if page.author %}				
 				<div class="row post-top-meta">
-					<div class="col-md-2">
+					<div class="col-md-2 text-center">
 						<img class="author-thumb" src="{{site.baseurl}}/{{author.avatar}}" alt="{{ author.display_name }}">
 					</div>
 					<div class="col-md-10">
-						<a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Follow</a>
+						<a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Seguir</a>
 						<span class="author-description">{{ author.description }}</span>						
 					</div>
 				</div>				
