He añadido la página acerca de mi y he traducido la política de privacidad

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -56,7 +56,7 @@
             {% assign tags = tags | split: ',' | uniq %}
     
             {% for tag in tags %}
-            <li class="tag_element">
+            <li class="tag-element">
                 <p>{{ tag }}</p>
             </li>
             {% endfor %}
