Se ha editado el fichero about.md

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,8 +4,7 @@
 
         <div id="social_media_links">
             <h2>
-                Dicen que cada vez que me sigues en mis redes, eres salvado de un nuevo
-                bug
+                Dicen que cada vez que me sigues en mis redes eres salvado de un nuevo bug
             </h2>
         </div>
         <a href="{{site.social.twitter}}">
