--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -189,7 +189,7 @@ small,
   li.tag-element {
     margin: 5px 5px 0 0;
     padding: 5px 10px;
-    background-color: rgb(0, 153, 255);
+    background-color: #0099ff;
     border-radius: 10px;
 
     p {
@@ -202,7 +202,21 @@ small,
 /* Pages */
 
 .hero {
-  background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+  background-image: linear-gradient(
+    to right top,
+    #d16ba5,
+    #c777b9,
+    #ba83ca,
+    #aa8fd8,
+    #9a9ae1,
+    #8aa7ec,
+    #79b3f4,
+    #69bff8,
+    #52cffe,
+    #41dfff,
+    #46eefa,
+    #5ffbf1
+  );
   padding: 5rem 5rem;
 }
 
@@ -512,10 +526,11 @@ ul.tags li a:hover {
   font-weight: 400;
 }
 
-.btn.follow:hover, .btn.follow:active {
+.btn.follow:hover,
+.btn.follow:active {
   background-color: rgb(0, 153, 255);
   border-color: rgb(0, 153, 255);
-  color: rgba(255, 255, 255, 1)
+  color: rgba(255, 255, 255, 1);
 }
 
 .btn.subscribe {
@@ -848,5 +863,18 @@ span.navigation:before {
 
   #author-name {
     margin-top: 18px;
+  }
+}
+
+figure#image-with-legend {
+
+  figcaption {
+    color: rgb(173, 173, 173);
+    font-style: italic;
+    font-size: 14px;
+    text-shadow: none;
+    height: auto;
+    word-wrap: break-word;
+    margin-top: 6px;
   }
 }
