Se ha limitado a una sola línea el texto del post previo y el siguiente

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -305,6 +305,9 @@ small,
 }
 
 .prevnextlinks .thepostlink {
+  text-overflow: ellipsis; 
+  white-space: nowrap; 
+  overflow: hidden;
   padding: 20px 0;
   font-size: 17px;
   display: block;
