Se han traducido algunos nombres de archivos y sus rutas

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,7 +27,7 @@
                 <p class="social_label">LinkedIn</p>
             </div>
         </a>
-        <a href="/contact">
+        <a href="/contacto">
             <div class="social_media_content">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                     class="bi bi-envelope-fill" viewBox="0 0 16 16">
