--- a/_includes/images.html
+++ b/_includes/images.html
@@ -1,4 +1,4 @@
 <figure id="image-with-legend">
-    <img src="{{ include.url }}" alt="{{ include.description }}">
+    <img src="{{ include.url }}" alt="{{ include.description }}" width="100%">
     <figcaption>{{ include.description }}</figcaption>
   </figure>
