--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@ gtag('config', '{{site.ganalytics}}');
 
           <div class="d-flex align-items-center">
             
-            <span class="ml-3 text-muted small">Mis redes: </span>
+            <span class="top-bar-social-media-title ml-3 text-muted small">Mis redes: </span>
 
             <a class="d-inline-block social-icon" target="_blank" href="{{site.social.twitter}}">
               <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
