--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -414,23 +414,28 @@ span.post-read-more a:hover {
 }
 
 .article-post {
-  font-size: 1.18em;
-  line-height: 1.64;
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 1em;
+  line-height: 1.7;
   color: rgba(0, 0, 0, 0.8);
+
   a {
     color: inherit;
     box-shadow: inset 0 -2px 0 rgba(255, 229, 31, 1),
       0 2px 0 rgba(255, 229, 31, 1);
   }
+
   a:hover {
     box-shadow: inset 0 -30px 0 rgba(255, 229, 31, 1),
       0 2px 0 rgba(255, 229, 31, 1);
     text-decoration: none;
   }
-  img,
-  iframe {
+
+  img, iframe {
     border-radius: 0.25rem !important;
   }
+  
 }
 
 blockquote {
@@ -924,4 +929,8 @@ table {
     text-align: left;
   }
 
+}
+
+.social-media-text {
+  font-size: 16px;
 }
